; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/advpack/extr_files.c_file_in_list.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/advpack/extr_files.c_file_in_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64*, i64*)* @file_in_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @file_in_list(i64* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64* %1, i64** %5, align 8
  %8 = load i64*, i64** %4, align 8
  %9 = call i64 @lstrlenA(i64* %8)
  store i64 %9, i64* %6, align 8
  br label %10

10:                                               ; preds = %28, %2
  %11 = load i64*, i64** %5, align 8
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %33

14:                                               ; preds = %10
  %15 = load i64*, i64** %5, align 8
  %16 = call i64 @lstrlenA(i64* %15)
  store i64 %16, i64* %7, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* %6, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %28

20:                                               ; preds = %14
  %21 = load i64*, i64** %4, align 8
  %22 = load i64*, i64** %5, align 8
  %23 = call i32 @lstrcmpiA(i64* %21, i64* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %20
  %26 = load i32, i32* @TRUE, align 4
  store i32 %26, i32* %3, align 4
  br label %35

27:                                               ; preds = %20
  br label %28

28:                                               ; preds = %27, %14
  %29 = load i64, i64* %7, align 8
  %30 = add nsw i64 %29, 1
  %31 = load i64*, i64** %5, align 8
  %32 = getelementptr inbounds i64, i64* %31, i64 %30
  store i64* %32, i64** %5, align 8
  br label %10

33:                                               ; preds = %10
  %34 = load i32, i32* @FALSE, align 4
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %33, %25
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i64 @lstrlenA(i64*) #1

declare dso_local i32 @lstrcmpiA(i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
